tests/ui/consts/static_mut_containing_mut_ref2.stock.stderr
error[E0658]: mutation through a reference is not allowed in statics
  --> $DIR/static_mut_containing_mut_ref2.rs:8:5
   |
LL |     *(&mut STDERR_BUFFER_SPACE) = 42;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #57349 <https://github.com/rust-lang/rust/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
