tests/ui/consts/static_mut_containing_mut_ref2.rs
#![allow(static_mut_refs)]

static mut STDERR_BUFFER_SPACE: u8 = 0;

pub static mut STDERR_BUFFER: () = unsafe {
    *(&mut STDERR_BUFFER_SPACE) = 42;
    //~^ ERROR could not evaluate static initializer
};

fn main() {}
